--- a/stylesheets/public.css
+++ b/stylesheets/public.css
@@ -1,26 +1,41 @@
 /* Site Colors:
-	<div style="border:1px solid green;">Hello</div>
-	<span style="border:1px solid green;">Hello</span>
-	#EEE4B9;
+<div style="border:1px solid green;">Hello</div>
+<span style="border:1px solid green;">Hello</span>
+#EEE4B9;
 */
-
-
 html { height: 100%; width: 100%; }
+
 body { width: 100%; height: 100%; margin: 0px; padding: 0px; border: 0px;
-	font-family: Verdana, Arial, Helvetica, sans-serif; background: #f5f5fd;
-	font-size: 13px; line-height: 15px; }
+font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif; background: #f5f5fd;
+font-size: 15px; line-height: 15px; }
+
+
 img { border: none; }
-table, tr, td { border-collapse: collapse; vertical-align: top; font-size: 13px; line-height: 15px;}
+
+
+table, tr, td { border-collapse: collapse; vertical-align: top; font-size: 15px; line-height: 15px;}
 a { color: #4b0c0c;}
 
-#header { height: 90px; margin: 0px; padding: 20px; text-align: center; 
-	background: black; color: #f5f5fd; }
-#header h1 { padding: 1em; margin: 0px; font-size: 45px;font-family: serif;}
-#main { margin: 0px; padding: 0px; height: 600px; width: 100%; background: #EEE4B9; }
+
+#header { height: 90px; margin: 0px; padding: 20px; text-align: center;
+background: black; color: #f5f5fd; font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;}
+
+
+#header h1 { padding: 1em; margin: 0px; font-size: 50px;font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;}
+
+
+#main { margin: 0px; padding: 0px; height: 600px; width: 100%; background: #7E7E80; }
+
+
 #structure { height: 600px; width: 100%; }
-#footer { height: 2em; margin: 0px; padding: 1em; text-align: center; 
-	background: black;  color: white; font-size: 18px;}
-#menu { font-weight: bold; text-align: center; font-size: 15px; line-height: 15px;}
-#intro {
- }
+
+#footer { height: 2em; margin: 0px; padding: 1em; text-align: center;
+background: black; color: white; font-size: 18px;font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;}
+#menu { font-weight: bold; text-align: center; font-size: 17px; line-height: 15px;}
+#intro {height: 2em; margin: 0px; padding: 20px; text-align: center; font-family: Perpetua, Baskerville, "Big Caslon", "Palatino Linotype", Palatino, "URW Palladio L", "Nimbus Roman No9 L", serif;
+}
+
+913636
+
+EEE4B9
 
